--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 image:          php:7.1-alpine
 
 before_script:
-- apk update
-- apk install git
+- apk update 77 && \
+  apk add git
 - curl -sS https://getcomposer.org/installer | php
 - php composer.phar install
 
