--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
             "email": "joby@byjoby.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=7.1"
+    },
     "autoload": {
         "psr-4": {
             "Sesh\\": "src/"
